--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+#Se define el puerto por donde escucha el servidor web
+server.port=80
+
+#Se modifica el formato en el que sale el log
+logging.pattern.dateformat=hh:mm
+
+#Se elimina el banner de spring
+spring.main.banner-mode=off
+
+#Se establece que no se mantengan las paginas 
+spring.thymeleaf.cache=false
